--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>lite-youtube-embed</title>
+    <title>Music Player</title></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./src/lite-yt-embed.css" />
   </head>
   <body>
-    <h1><code>lite-youtube</code> custom element</h1>
 
     <lite-youtube videoid="bfjggCYahx4"></lite-youtube>
+
+<lite-youtube videoid="bfjggCYahx4"></lite-youtube>
 
     <script src="./src/lite-yt-embed.js"></script>
 
