--- a/index.html
+++ b/index.html
@@ -10,18 +10,9 @@
 
     <lite-youtube videoid="bfjggCYahx4"></lite-youtube>
 
-<lite-youtube videoid="bfjggCYahx4"></lite-youtube>
+<lite-youtube videoid="MqHyrVwsFu8"></lite-youtube>
+
+    <lite-youtube videoid="YffdCMm6bZQ"></lite-youtube>
+
 
     <script src="./src/lite-yt-embed.js"></script>
-
-    <h3>View isolated demos:</h3>
-    <ul>
-      <li><a href="./variants/solo.html">lite-youtube-embed</a>
-      <li><a href="./variants/pe.html">lite-youtube-embed - progressively enhanced</a>
-      <li><a href="./variants/custom-poster-image.html">lite-youtube-embed - custom poster image</a>
-      <li><a href="./variants/params.html">lite-youtube-embed - with parameters</a></li>
-      <li><a href="./variants/multiple-embeds.html">lite-youtube-embed - multiple embeds on same page</a>
-      <li><a href="./variants/yt.html">normal youtube embed</a>
-    </ul>
-  </body>
-</html>
