--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
 
+# Music Player
+
     <lite-youtube videoid="bfjggCYahx4"></lite-youtube>
 
 <lite-youtube videoid="MqHyrVwsFu8"></lite-youtube>
@@ -16,3 +18,5 @@
 
 
     <script src="./src/lite-yt-embed.js"></script>
+
+<p>site by inchrys</p>
